--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@
 # production
 /build
 
+
 # misc
 .DS_Store
 
@@ -22,6 +23,7 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+yarn.lock
 
 # local env files
 .env.local
